--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div class="wrap">
-      <input id="q" type="text" placeholder="Search tabs…" autocomplete="off" />
+      <div class="search-wrap">
+        <svg class="search-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><line x1="21" y1="21" x2="16.65" y2="16.65"/></svg>
+        <input id="q" type="text" placeholder="Search tabs…" autocomplete="off" />
+      </div>
       <div id="meta"></div>
       <ul id="list" role="listbox" aria-label="Tabs"></ul>
     </div>
