--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,30 @@
   <head>
     <meta charset="utf-8" />
     <meta name="color-scheme" content="light dark" />
-    <title>Tab Jumper</title>
+    <title>Modern Tab Switcher</title>
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <div class="wrap">
       <div class="search-wrap">
-        <svg class="search-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><line x1="21" y1="21" x2="16.65" y2="16.65"/></svg>
-        <input id="q" type="text" placeholder="Search tabs…" autocomplete="off" />
+        <svg
+          class="search-icon"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <circle cx="11" cy="11" r="8" />
+          <line x1="21" y1="21" x2="16.65" y2="16.65" />
+        </svg>
+        <input
+          id="q"
+          type="text"
+          placeholder="Search tabs…"
+          autocomplete="off"
+        />
       </div>
       <div id="meta"></div>
       <ul id="list" role="listbox" aria-label="Tabs"></ul>
